#1155 RMBTStatisticServer: fix CSV/Excel-Export add settlement_type and street infos
