# RMBTStatisticServer/src/at/rtr/rmbt/statisticServer/export/ExportResource.java
@@ -178,7 +178,7 @@ public class ExportResource extends ServerResource
         }
         
         final String timeClause;
-        
+
         if (dateExport)
         	timeClause = " AND (EXTRACT (month FROM t.time AT TIME ZONE 'UTC') = " + month + 
         	") AND (EXTRACT (year FROM t.time AT TIME ZONE 'UTC') = " + year + ") ";
@@ -194,30 +194,30 @@ public class ExportResource extends ServerResource
                 " to_char(t.time AT TIME ZONE 'UTC', 'YYYY-MM-DD HH24:MI:SS') \"time\"," +
                 " nt.group_name cat_technology," +
                 " nt.name network_type," +
-                " (CASE WHEN (t.geo_accuracy < ?) AND (t.geo_provider IS DISTINCT FROM 'manual') AND (t.geo_provider IS DISTINCT FROM 'geocoder') THEN" +
-                " t.geo_lat" +
-                " WHEN (t.geo_accuracy < ?) THEN" +
-                " ROUND(t.geo_lat*1111)/1111" +
+                " (CASE WHEN (tl.geo_accuracy < ?) AND (tl.geo_provider IS DISTINCT FROM 'manual') AND (tl.geo_provider IS DISTINCT FROM 'geocoder') THEN" +
+                " tl.geo_lat" +
+                " WHEN (tl.geo_accuracy < ?) THEN" +
+                " ROUND(tl.geo_lat*1111)/1111" +
                 " ELSE null" +
                 " END) latitude," +
-                " (CASE WHEN (t.geo_accuracy < ?) AND (t.geo_provider IS DISTINCT FROM 'manual') AND (t.geo_provider IS DISTINCT FROM 'geocoder') THEN" +
-                " t.geo_long" +
-                " WHEN (t.geo_accuracy < ?) THEN" +
-                " ROUND(t.geo_long*741)/741 " +
+                " (CASE WHEN (tl.geo_accuracy < ?) AND (tl.geo_provider IS DISTINCT FROM 'manual') AND (tl.geo_provider IS DISTINCT FROM 'geocoder') THEN" +
+                " tl.geo_long" +
+                " WHEN (tl.geo_accuracy < ?) THEN" +
+                " ROUND(tl.geo_long*741)/741 " +
                 " ELSE null" +
                 " END) longitude," +
-                " (CASE WHEN ((t.geo_provider = 'manual') OR (t.geo_provider = 'geocoder')) THEN" +
+                " (CASE WHEN ((tl.geo_provider = 'manual') OR (tl.geo_provider = 'geocoder')) THEN" +
                 " 'rastered'" + //make raster transparent
-                " ELSE t.geo_provider" +
+                " ELSE tl.geo_provider" +
                 " END) loc_src," + 
-                " (CASE WHEN (t.geo_accuracy < ?) AND (t.geo_provider IS DISTINCT FROM 'manual') AND (t.geo_provider IS DISTINCT FROM 'geocoder') " +
-                " THEN round(t.geo_accuracy::float * 10)/10 " +
-                " WHEN (t.geo_accuracy < 100) AND ((t.geo_provider = 'manual') OR (t.geo_provider = 'geocoder')) THEN 100" + // limit accuracy to 100m
-                " WHEN (t.geo_accuracy < ?) THEN round(t.geo_accuracy::float * 10)/10" +
+                " (CASE WHEN (tl.geo_accuracy < ?) AND (tl.geo_provider IS DISTINCT FROM 'manual') AND (tl.geo_provider IS DISTINCT FROM 'geocoder') " +
+                " THEN round(tl.geo_accuracy::float * 10)/10 " +
+                " WHEN (tl.geo_accuracy < 100) AND ((tl.geo_provider = 'manual') OR (tl.geo_provider = 'geocoder')) THEN 100" + // limit accuracy to 100m
+                " WHEN (tl.geo_accuracy < ?) THEN round(tl.geo_accuracy::float * 10)/10" +
                 " ELSE null END) loc_accuracy, " +
-                " t.gkz_bev gkz," +
+                " tl.gkz_bev gkz," +
                 " NULL zip_code," +
-                " t.country_location country_location," + 
+                " tl.country_location country_location," +
                 " t.speed_download download_kbit," +
                 " t.speed_upload upload_kbit," +
                 " round(t.ping_median::float / 100000)/10 ping_ms," +
@@ -240,19 +240,25 @@ public class ExportResource extends ServerResource
                 " COALESCE(t.implausible, false) implausible," +
                 " t.signal_strength," +
                 " t.pinned pinned," +
-                " t.kg_nr_bev kg_nr," +
-                " t.gkz_sa gkz_sa," +
-                " t.land_cover, " +
+                " tl.kg_nr_bev kg_nr," +
+                " tl.gkz_sa gkz_sa," +
+                " tl.land_cover, " +
                 " t.cell_location_id cell_area_code," +
                 " t.cell_area_code cell_location_id," +
                 " t.channel_number channel_number," +
                 " t.radio_band radio_band" +
+                " , tl.settlement_type settlement_type" +
+                " , tl.link_id link_id" +
+                " , tl.link_name link_name" +
+                " , tl.link_distance link_distance" +
+                " , tl.edge_id edge_id" +
+                " , tl.frc link_frc" +
                 " FROM test t" +
-                /* no comma at then end !! */
                 " LEFT JOIN network_type nt ON nt.uid=t.network_type" +
                 " LEFT JOIN device_map adm ON adm.codename=t.model" +
                 " LEFT JOIN test_server ts ON ts.uid=t.server_id" +
                 " LEFT JOIN test_ndt ndt ON t.uid=ndt.test_id" +
+                " LEFT JOIN test_location tl on t.open_test_uuid = tl.open_test_uuid" +
                 " WHERE " +
                 " t.deleted = false" + 
                 timeClause +
